new system genocide

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -859,7 +859,7 @@
  STATE_858: "Haifa"
  STATE_859: "Antakya"
  STATE_860: "Gelibolu"
- STATE_861: "Biga"
+ STATE_861: "Çanakkale"
  STATE_862: "Liberian Hinterland"
  STATE_863: "Briey"
  STATE_864: "Gérardmer"
@@ -879,7 +879,7 @@
  STATE_878: "Medina"
  STATE_879: "Erbil"
  STATE_880: "Geledi"
- STATE_881: "Mamuret-ul-Aziz"
+ STATE_881: "Dersim"
  STATE_882: "Oman"
  STATE_883: "Suleymaniyah"
  STATE_884: "Al Hasakah"
