--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -5398,9 +5398,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_romanian_to_georgian_minority:0 "Replace §Y£ww1_flag_ROM  Romanian Minority§! with §Y£ww1_flag_GEO  Georgian Minority§!\nEffective change:\n[TUR_minority_local_factory_sabotage_down][TUR_minority_compliance_growth_down][TUR_minority_recruitable_population_down]"
  TUR_romanian_to_azerbaijani_minority:0 "Replace §Y£ww1_flag_ROM  Romanian Minority§! with §Y£ww1_flag_AZR  Azerbaijani Minority§!\nEffective change:\n[TUR_minority_local_factory_sabotage_down][TUR_minority_compliance_growth_down][TUR_minority_recruitable_population_down]"
 
- TUR_minority_level_down:0 "Modify [TUR_get_state_minority] by\n"
- TUR_minority_stability_war_support_down:0 "[TUR_minority_stability_war_support_down]"
- TUR_minority_stability_war_support_down_yes:0 "\nModify State's Modification to §YSeparatist Sentiments§! by\n"
  TUR_pro_ottoman_propaganda_for_shia:0 "Pro-Ottoman Propaganda for Shia in [FROM.GetName]"
  TUR_pro_ottoman_propaganda_for_shia_desc:0 "The Shia Muslim population in our Sunni empire has long been marginalized. By emphasizing on our united Muslim identity, we can mitigate the effects of the sectarian divisions."
  TUR_pro_ottoman_propaganda_for_shia_tt:0 "Modify £ww1_flag_ARB  §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!\n£ww1_flag_ARB  §YArab Millet§!:\nModifies §YSeparatist Sentiments§! by\n£stability_texticon  Stability: §G+0.10%§!\n£war_support_modifiericons_texticon  War Support: §G+0.10%§!\n"
@@ -5479,11 +5476,22 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_clash_against_armenian_gangs_desc:0 "Armenian gangs have been taking up arms in order to defend themselves ever since the tyranical rule of Abdulhamid II. Though their situation is improving, their habit of takign up arms still remain. We must combat against these groups to secure state authority."
  TUR_clash_against_armenian_gangs_tt:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §R+10.0%§!\n"
  TUR_clash_against_armenian_gangs_tt2:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£attrition_texticon  Division Attrition: §G-10.0%§!\n£defence_texticon  Division Defense: §G+5.0%§!\n£enemy_supply_texticon  Enemy Local Supplies: §G-5%§!\n"
+ TUR_increase_adana_centralization_1:0 "Modify §YCentralization§! of §YAdana Vilayet§! by §G+1%§!\n"
+ TUR_increase_aleppo_centralization_1:0 "Modify §YCentralization§! of §YAleppo Vilayet§! by §G+1%§!\n"
+ TUR_increase_sivas_centralization_1:0 "Modify §YCentralization§! of §YSivas Vilayet§! by §G+1%§!\n"
+ TUR_increase_mamuret_ul_aziz_centralization_1:0 "Modify §YCentralization§! of §YMamuret-ul-Aziz Vilayet§! by §G+1%§!\n"
+ TUR_increase_bitlis_centralization_1:0 "Modify §YCentralization§! of §YBitlis Vilayet§! by §G+1%§!\n"
+ TUR_increase_diyarbakir_centralization_1:0 "Modify §YCentralization§! of §YDiyarbakir Vilayet§! by §G+1%§!\n"
+ TUR_increase_van_centralization_1:0 "Modify §YCentralization§! of §YVan Vilayet§! by §G+1%§!\n"
+ TUR_increase_erzurum_centralization_1:0 "Modify §YCentralization§! of §YErzurum Vilayet§! by §G+1%§!\n"
  TUR_exterminate_armenians:0 "Exterminate Armenians in [FROM.GetName]"
  TUR_exterminate_armenians_desc:0 "There are several towns and villages that accompany a large Armenian population in [FROM.GetName]. By marching them through desert while effectively decreasing their numbers, we can create an ethnically homogenious society."
  TUR_usurp_assyrian_properties:0 "Usurp Assyrian Properties"
  TUR_usurp_assyrian_properties_desc:0 "While our eastern lands don't have much to offer, the little they have are being owned by Christians. By confiscating their properties, we can decrease their influence."
- TUR_usurp_assyrian_properties_tt:0 "Modify £ww1_flag_ASY §YAssyrian Minority§! by\n£civ_factory  Max Factories in a State: §G+5%§!\n£construction_speed_texticon  Local Construction Speed: §G+5%§!\n\n"
+ TUR_usurp_assyrian_properties_tt:0 "Modify £ww1_flag_ASY §YAssyrian Minority§! by\n£civ_factory  Max Factories in a State: §G+5%§!\n\n"
+ TUR_increase_diyarbakir_centralization_1:0 "Modify §YCentralization§! of §YDiyarbakır Vilayet§! by §G+1%§!\n"
+ TUR_increase_van_centralization_1:0 "Modify §YCentralization§! of §YVan Vilayet§! by §G+1%§!\n"
+ TUR_increase_erbil_centralization_1:0 "Modify §YCentralization§! of §YErbil Vilayet§! by §G+1%§!\n"
  TUR_massacre_assyrians:0 "Massacre Assyrians in [FROM.GetName]"
  TUR_massacre_assyrians_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
  TUR_occupy_mount_lebanon_mutasarrifate:0 "Lift the Mount Lebanon Mutasarrifate"
@@ -5502,25 +5510,35 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_abolish_principality_of_samos:0 "Abolish Principality of Samos"
  TUR_abolish_principality_of_samos_desc:0 "Granted self-rule in 1834, Samos has been enjoying large scale autonomy with its own governor and parliament. Yet as we're trying to integrate our empire, we cannot let this autonomous region to exist within our empire."
 
- TUR_minority_local_factories_down:0 "[TUR_minority_local_factories_down]"
+ TUR_armenian_level_down:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n"
+ TUR_greek_level_down:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! by\n"
+
+ TUR_minority_local_factories_greek_down:0 "[TUR_minority_local_factories_greek_down]"
+ TUR_minority_local_factories_jewish_down:0 "[TUR_minority_local_factories_jewish_down]"
  TUR_minority_local_factories_normal:0 "£civ_factory  Local Factories: §G+5%§!\n"
  TUR_minority_local_factories_4:0 "£civ_factory  Local Factories: §G+4%§!\n"
  TUR_minority_local_factories_3:0 "£civ_factory  Local Factories: §G+3%§!\n"
  TUR_minority_local_factories_2:0 "£civ_factory  Local Factories: §G+2%§!\n"
  TUR_minority_local_factories_1:0 "£civ_factory  Local Factories: §G+1%§!\n"
- TUR_minority_intel_to_enemies_down:0 "[TUR_minority_intel_to_enemies_down]"
- TUR_minority_intel_to_enemies_normal:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-10%§!\n"
- TUR_minority_intel_to_enemies_9:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-9%§!\n"
- TUR_minority_intel_to_enemies_8:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-8%§!\n"
- TUR_minority_intel_to_enemies_7:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-7%§!\n"
- TUR_minority_intel_to_enemies_6:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-6%§!\n"
- TUR_minority_intel_to_enemies_5:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-5%§!\n"
- TUR_minority_intel_to_enemies_4:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-4%§!\n"
- TUR_minority_intel_to_enemies_3:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-3%§!\n"
- TUR_minority_intel_to_enemies_2:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-2%§!\n"
- TUR_minority_intel_to_enemies_1:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-1%§!\n"
- TUR_minority_recruitable_population_down:0 "[TUR_minority_recruitable_population_down]"
- TUR_minority_recruitable_population2_down:0 "[TUR_minority_recruitable_population2_down]"
+ TUR_minority_local_intel_to_enemies_down:0 "[TUR_minority_local_intel_to_enemies_down]"
+ TUR_minority_local_intel_to_enemies_normal:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-10%§!\n"
+ TUR_minority_local_intel_to_enemies_9:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-9%§!\n"
+ TUR_minority_local_intel_to_enemies_8:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-8%§!\n"
+ TUR_minority_local_intel_to_enemies_7:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-7%§!\n"
+ TUR_minority_local_intel_to_enemies_6:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-6%§!\n"
+ TUR_minority_local_intel_to_enemies_5:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-5%§!\n"
+ TUR_minority_local_intel_to_enemies_4:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-4%§!\n"
+ TUR_minority_local_intel_to_enemies_3:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-3%§!\n"
+ TUR_minority_local_intel_to_enemies_2:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-2%§!\n"
+ TUR_minority_local_intel_to_enemies_1:0 "£operatives_build_intel_network_texticon  Intel to Enemies: §G-1%§!\n"
+ TUR_minority_recruitable_population_armenian_down:0 "[TUR_minority_recruitable_population_armenian_down]"
+ TUR_minority_recruitable_population_greek_down:0 "[TUR_minority_recruitable_population_greek_down]"
+ TUR_minority_recruitable_population_jewish_down:0 "[TUR_minority_recruitable_population_jewish_down]"
+ TUR_minority_recruitable_population_south_slavic_down:0 "[TUR_minority_recruitable_population_south_slavic_down]"
+ TUR_minority_recruitable_population_albanian_down:0 "[TUR_minority_recruitable_population_albanian_down]"
+ TUR_minority_recruitable_population_assyrian_down:0 "[TUR_minority_recruitable_population_assyrian_down]"
+ TUR_minority_recruitable_population_romanian_down:0 "[TUR_minority_recruitable_population_romanian_down]"
+ TUR_minority_recruitable_population_georgian_down:0 "[TUR_minority_recruitable_population_georgian_down]"
  TUR_minority_recruitable_population_normal:0 "£manpower_texticon  Recruitable Population: §G+5.00%§!\n"
  TUR_minority_recruitable_population_4_5:0 "£manpower_texticon  Recruitable Population: §G+4.50%§!\n"
  TUR_minority_recruitable_population_4:0 "£manpower_texticon  Recruitable Population: §G+4.00%§!\n"
@@ -5541,15 +5559,17 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_local_construction_speed_6:0 "£construction_speed_texticon  Local Construction Speed: §G+1%§!\n"
 
  TUR_minority_local_supplies_for_controller_down:0 "[TUR_minority_local_supplies_for_controller_down]"
+ TUR_minority_local_supplies_for_controller_down_2:0 "[TUR_minority_local_supplies_for_controller_down_2]"
  TUR_minority_local_supplies_for_controller_normal:0 "£supply_texticon  Local Supplies: §G+5%§!\n"
  TUR_minority_local_supplies_for_controller_4:0 "£supply_texticon  Local Supplies: §G+4%§!\n"
  TUR_minority_local_supplies_for_controller_3:0 "£supply_texticon  Local Supplies: §G+3%§!\n"
  TUR_minority_local_supplies_for_controller_2:0 "£supply_texticon  Local Supplies: §G+2%§!\n"
  TUR_minority_local_supplies_for_controller_1:0 "£supply_texticon  Local Supplies: §G+1%§!\n"
 
- TUR_minority_local_supplies_for_controller2_down:0 "[TUR_minority_local_supplies_for_controller2_down]"
- TUR_minority_local_supplies_for_controller_2:0 "£supply_texticon  Local Supplies: §G+2%§!\n"
- TUR_minority_local_supplies_for_controller_1:0 "£supply_texticon  Local Supplies: §G+1%§!\n"
+ TUR_minority_army_speed_factor_for_controller_down:0 "[TUR_minority_army_speed_factor_for_controller_down]"
+ TUR_minority_army_speed_factor_for_controller_normal:0 "£attacker_speed_texticon  Divisions speed: §G+3.00%§!\n"
+ TUR_minority_army_speed_factor_for_controller_2:0 "£attacker_speed_texticon  Divisions speed: §G+2.00%§!\n"
+ TUR_minority_army_speed_factor_for_controller_1:0 "£attacker_speed_texticon  Divisions speed: §G+1.00%§!\n"
 
  TUR_minority_required_garrison_factor_down:0 "[TUR_minority_required_garrison_factor_down]"
  TUR_minority_required_garrison_factor_normal:0 "£garrison_texticon  Required Garrisons: §G-5%§!\n"
@@ -5612,7 +5632,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_minority_enemy_local_supplies_2:0 "£enemy_supply_texticon  Enemy Local Supplies: §G-2%§!\n"
  TUR_minority_enemy_local_supplies_1:0 "£enemy_supply_texticon  Enemy Local Supplies: §G-1%§!\n"
 
- TUR_minority_local_resources_factor_down:0 "[TUR_minority_local_resources_factor_down]"
+ TUR_minority_local_resources_factor_kurdish_down:0 "[TUR_minority_local_resources_factor_kurdish_down]"
+ TUR_minority_local_resources_factor_jewish_down:0 "[TUR_minority_local_resources_factor_jewish_down]"
  TUR_minority_local_resources_factor_normal:0 "£resources_texticon  Resource Gain Efficiency: §G+5.00%§!\n"
  TUR_minority_local_resources_factor_4:0 "£resources_texticon  Resource Gain Efficiency: §G+4.00%§!\n"
  TUR_minority_local_resources_factor_3:0 "£resources_texticon  Resource Gain Efficiency: §G+3.00%§!\n"
