--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4364,13 +4364,13 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.100.d:0 "Our recent policies in some regions have proven to be quite unpopular. As a result, previously loyal and quite closely affiliated states within our empire have started to openly defy our rule. As a consequence, we'll have to govern the region no different from a foreign occupied state."
  ottoman.100.a:0 "They'll learn to be a part of our empire soon enough."
  ottoman.101.t:0 "Unintended Consequences"
- ottoman.101.d:0 "Recent land handover to Kurds that is populated by Armenians and Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.101.d:0 "Recent land handover to Kurds that is populated by Armenians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
  ottoman.101.a:0 "Human nature at its best."
  ottoman.102.t:0 "Unintended Consequences"
- ottoman.102.d:0 "Recent land handover to Kurds that is populated by Armenians and Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.102.d:0 "Recent land handover to Kurds that is populated by Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
  ottoman.102.a:0 "Human nature at its best."
  ottoman.103.t:0 "Unintended Consequences"
- ottoman.103.d:0 "Recent land handover to Kurds that is populated by Armenians and Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.103.d:0 "Recent land handover to Kurds that is populated by Armenians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
  ottoman.103.a:0 "Human nature at its best."
  ottoman.104.t:0 "Unintended Consequences"
  ottoman.104.d:0 "As we've passed Temporary Law on Deportation, many Armenians within our empire has actively started resistance for their well being. As we were looking for a justification to defend our atrocities, this will be the perfect cover for our actions. As if we ever need to deny our actions in the future, we'll simply say "it never happened, but they deserved it."
@@ -4488,6 +4488,24 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.132.t:0 "End of the Socialist Workers' Federation"
  ottoman.132.d:0 "Socialist Workers' Federation was the empire's greatest and most active socialist party. While other mostly left-wing socialist leaning parties were either nationalist minority parties or intellectual think-tanks, Socialist Workers Federation can be considered the only legitimate multi-ethnic socialist party. Yet with the loss of Thessaloniki, the party has been transferred to [345.owner.GetName] rather than continuing operating in our country."
  ottoman.132.a:0 "Even the mainstream socialist party is nationalized."
+ ottoman.134.t:0 "Unintended Consequences"
+ ottoman.134.d:0 "Recent land handover to Kurds that is populated by Armenians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.134.a:0 "Human nature at its best."
+ ottoman.135.t:0 "Unintended Consequences"
+ ottoman.135.d:0 "Recent land handover to Kurds that is populated by Armenians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.135.a:0 "Human nature at its best."
+ ottoman.136.t:0 "Unintended Consequences"
+ ottoman.136.d:0 "Recent land handover to Kurds that is populated by Armenians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.136.a:0 "Human nature at its best."
+ ottoman.137.t:0 "Unintended Consequences"
+ ottoman.137.d:0 "Recent land handover to Kurds that is populated by Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.137.a:0 "Human nature at its best."
+ ottoman.138.t:0 "Unintended Consequences"
+ ottoman.138.d:0 "Recent land handover to Kurds that is populated by Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.138.a:0 "Human nature at its best."
+ ottoman.139.t:0 "Unintended Consequences"
+ ottoman.139.d:0 "Recent land handover to Kurds that is populated by Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
+ ottoman.139.a:0 "Human nature at its best."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
