returned lost events

--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4506,6 +4506,22 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.139.t:0 "Unintended Consequences"
  ottoman.139.d:0 "Recent land handover to Kurds that is populated by Assyrians have resulted in Kurdish tribes massacring minority Christians and looting their villages for their own ends. This event will result inn numerous deaths."
  ottoman.139.a:0 "Human nature at its best."
+ ottoman.140.t: "Bulgarian-Ottoman Convention"
+ ottoman.140.d: "As we've already signed a friendship treaty with the Ottomans, a delegation from them has arrived at [BUL.capital.GetName]. Their goal is to convince us to join the war on their and the [GER.GetAdjective] side with the intention of establishing land connection to Germay. To further secure a positive response from us, they've reluctantly offered [200.GetName] if we join the German side."
+ ottoman.140.a: "An opportunity to capture our lost lands"
+ ottoman.140.b: "We have no interest in such a war."
+ ottoman.141.t: "[BUL.GetName] Accepts our an Alliance"
+ ottoman.141.d: "Our delegation was successful in convincing [BUL.GetName] to the [GER.GetAdjective] and our side in the war. Though we had to hand over [200.GetName] to [BUL.GetName], now we have a land connection to [GER.GetName]."
+ ottoman.141.a: "A necessary sacrifice."
+ ottoman.142.t: "[BUL.GetName] Refused our Alliance"
+ ottoman.142.d: "Even though we've signed a friendship treaty with them previously, the [BUL.GetAdjective] government has refused to join [GER.GetAdjective] and our side in the war. Even offering [200.GetName] in exchange of an alliance was not sufficience enough."
+ ottoman.142.a: "Then we'll have [200.GetName] to ourselves."
+ ottoman.143.t: "Munition Crisis"
+ ottoman.143.d: "As the war wages on, the foreign dependent industry of ours has been exposed with a great munition and shell shortage. Due to the enemy blockade in the sea, we can't transport weapons from abroad. Unless we manage to close the shortage, or find a new route to transport weapons, this crisis will continue to threateb the integrity of our regime."
+ ottoman.143.a: "Dire times calls for unusual actions..."
+ ottoman.144.t: "Dissolution of the Regime"
+ ottoman.144.d: "Due to the everlasting munition shortages in the empire during such critical times, the empire is no longer of capable of continuing the war. The incompetence of the regime has been apparent to everyone and the crisis finally led to the dissolution of it."
+ ottoman.144.a: "And now we've witnessed how imcompetent the regime really was..."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
