vilayet fix and more centralization

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -3292,7 +3292,7 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_archipelago_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?TUR_archipelago_centralization|Y0%][ottoman_archipelago_vilayet_centralization_value]"
  ottoman_archipelago_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_archipelago_vc_effect|+%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_archipelago_vc_effect|+%]"
  ottoman_archipelago_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_archipelago_vilayet_stability_factor][ottoman_archipelago_vilayet_war_support_factor][ottoman_archipelago_vilayet_political_power_factor]"
- ottoman_archipelago_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_archipelago_vilayet_stability_factor][ottoman_archipelago_vilayet_war_support_factor][ottoman_archipelago_vilayet_political_power_factor][ottoman_archipelago_vilayet_790][ottoman_archipelago_vilayet_975][ottoman_archipelago_vilayet_974][ottoman_archipelago_vilayet_900][ottoman_archipelago_vilayet_164][ottoman_archipelago_vilayet_899][ottoman_archipelago_vilayet_183]"
+ ottoman_archipelago_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_archipelago_vilayet_stability_factor][ottoman_archipelago_vilayet_war_support_factor][ottoman_archipelago_vilayet_political_power_factor][ottoman_archipelago_vilayet_790][ottoman_archipelago_vilayet_975][ottoman_archipelago_vilayet_974][ottoman_archipelago_vilayet_900][ottoman_archipelago_vilayet_164][ottoman_archipelago_vilayet_899]"
  ottoman_archipelago_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_archipelago_stability_factor|=2%+]"
  ottoman_archipelago_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_archipelago_war_support_factor|=2%+]"
  ottoman_archipelago_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_archipelago_political_power_factor|=0%+]"
@@ -3302,7 +3302,20 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_archipelago_vilayet_900_yes:0 "\n§Y[900.GetName]§!:[TUR_greek_population_900]"
  ottoman_archipelago_vilayet_164_yes:0 "\n§Y[164.GetName]§!:[TUR_greek_population_164]"
  ottoman_archipelago_vilayet_899_yes:0 "\n§Y[899.GetName]§!:[TUR_greek_population_899][TUR_turkish_population_899]"
- ottoman_archipelago_vilayet_183_yes:0 "\n§Y[183.GetName]§!:[TUR_greek_population_183][TUR_turkish_population_183]"
+
+ TUR_cyprus_vilayet:0 "Cyprus Mutasarrifate"
+ TUR_cyprus_vilayet_desc:0 "[TUR_cyprus_vilayet_desc]"
+ TUR_cyprus_vilayet_desc_yes:0 "§W[ottoman_cyprus_vilayet_centralization_desc][ottoman_cyprus_vilayet_separatist_sentiments_desc]§!"
+ ottoman_cyprus_vilayet_tt_blocked:0 "§YCyprus Mutasarrifate§![ottoman_cyprus_vilayet_centralization][ottoman_cyprus_vilayet_separatist_sentiments]"
+ ottoman_cyprus_vilayet_centralization_yes:0 "\nCentralization: [?TUR_cyprus_centralization|Y0%]"
+ ottoman_cyprus_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?TUR_cyprus_centralization|Y0%][ottoman_cyprus_vilayet_centralization_value]"
+ ottoman_cyprus_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_cyprus_vc_effect|+%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_cyprus_vc_effect|+%]"
+ ottoman_cyprus_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_cyprus_vilayet_stability_factor][ottoman_cyprus_vilayet_war_support_factor][ottoman_cyprus_vilayet_political_power_factor]"
+ ottoman_cyprus_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_cyprus_vilayet_stability_factor][ottoman_cyprus_vilayet_war_support_factor][ottoman_cyprus_vilayet_political_power_factor][ottoman_cyprus_vilayet_183]"
+ ottoman_cyprus_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_cyprus_stability_factor|=2%+]"
+ ottoman_cyprus_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_cyprus_war_support_factor|=2%+]"
+ ottoman_cyprus_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_cyprus_political_power_factor|=0%+]"
+ ottoman_cyprus_vilayet_183_yes:0 "\n§Y[183.GetName]§!:[TUR_greek_population_183][TUR_turkish_population_183]"
 
  TUR_biga_vilayet:0 "Biga Mutasarrifate"
  TUR_biga_vilayet_desc:0 "[TUR_biga_vilayet_desc]"
@@ -3435,13 +3448,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_diyarbakir_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?TUR_diyarbakir_centralization|Y0%][ottoman_diyarbakir_vilayet_centralization_value]"
  ottoman_diyarbakir_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_diyarbakir_vc_effect|+%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_diyarbakir_vc_effect|+%]"
  ottoman_diyarbakir_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_diyarbakir_vilayet_stability_factor][ottoman_diyarbakir_vilayet_war_support_factor][ottoman_diyarbakir_vilayet_political_power_factor]"
- ottoman_diyarbakir_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_diyarbakir_vilayet_stability_factor][ottoman_diyarbakir_vilayet_war_support_factor][ottoman_diyarbakir_vilayet_political_power_factor][ottoman_diyarbakir_vilayet_350][ottoman_diyarbakir_vilayet_829][ottoman_diyarbakir_vilayet_884]"
+ ottoman_diyarbakir_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_diyarbakir_vilayet_stability_factor][ottoman_diyarbakir_vilayet_war_support_factor][ottoman_diyarbakir_vilayet_political_power_factor][ottoman_diyarbakir_vilayet_350][ottoman_diyarbakir_vilayet_829]"
  ottoman_diyarbakir_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_diyarbakir_stability_factor|=2%+]"
  ottoman_diyarbakir_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_diyarbakir_war_support_factor|=2%+]"
  ottoman_diyarbakir_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_diyarbakir_political_power_factor|=0%+]"
  ottoman_diyarbakir_vilayet_350_yes:0 "\n§Y[350.GetName]§!:[TUR_armenian_population_350][TUR_kurdish_population_350][TUR_autonomy_350]"
  ottoman_diyarbakir_vilayet_829_yes:0 "\n§Y[829.GetName]§!:[TUR_kurdish_population_829][TUR_assyrian_population_829]"
- ottoman_diyarbakir_vilayet_884_yes:0 "\n§Y[884.GetName]§!:[TUR_kurdish_population_884][TUR_assyrian_population_884]"
 
  TUR_erzurum_vilayet:0 "Erzurum Vilayet"
  TUR_erzurum_vilayet_desc:0 "[TUR_erzurum_vilayet_desc]"
@@ -3673,11 +3685,12 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  ottoman_deir_ez_zor_vilayet_centralization_desc_yes:0 "----------------------------\nVilayet Centralization: [?TUR_deir_ez_zor_centralization|Y0%][ottoman_deir_ez_zor_vilayet_centralization_value]"
  ottoman_deir_ez_zor_vilayet_centralization_value_yes:0 "\nEffects from §YVilayet Centralization§!:\n£manpower_texticon  Local Manpower: [?TUR_deir_ez_zor_vc_effect|+%]\n£construction_speed_texticon  Local Construction Speed: [?TUR_deir_ez_zor_vc_effect|+%]"
  ottoman_deir_ez_zor_vilayet_separatist_sentiments_yes:0 "\nModify §YSeparatist Sentiments§! by[ottoman_deir_ez_zor_vilayet_stability_factor][ottoman_deir_ez_zor_vilayet_war_support_factor][ottoman_deir_ez_zor_vilayet_political_power_factor]"
- ottoman_deir_ez_zor_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_deir_ez_zor_vilayet_stability_factor][ottoman_deir_ez_zor_vilayet_war_support_factor][ottoman_deir_ez_zor_vilayet_political_power_factor][ottoman_deir_ez_zor_vilayet_680]"
+ ottoman_deir_ez_zor_vilayet_separatist_sentiments_desc_yes:0 "\n----------------------------\nModify §YSeparatist Sentiments§! by[ottoman_deir_ez_zor_vilayet_stability_factor][ottoman_deir_ez_zor_vilayet_war_support_factor][ottoman_deir_ez_zor_vilayet_political_power_factor][ottoman_deir_ez_zor_vilayet_680][ottoman_deir_ez_zor_vilayet_884]"
  ottoman_deir_ez_zor_vilayet_stability_factor_yes:0 "\n£stability_texticon  Stability: [?TUR_deir_ez_zor_stability_factor|=2%+]"
  ottoman_deir_ez_zor_vilayet_war_support_factor_yes:0 "\n£war_support_modifiericons_texticon  War Support: [?TUR_deir_ez_zor_war_support_factor|=2%+]"
  ottoman_deir_ez_zor_vilayet_political_power_factor_yes:0 "\n£political_power_texticon  Daily Political Power Gain: [?TUR_deir_ez_zor_political_power_factor|=0%+]"
  ottoman_deir_ez_zor_vilayet_680_yes:0 "\n§Y[680.GetName]§!:[TUR_arab_population_680][TUR_kurdish_population_680]"
+ ottoman_deir_ez_zor_vilayet_884_yes:0 "\n§Y[884.GetName]§!:[TUR_kurdish_population_884][TUR_assyrian_population_884]"
 
  TUR_mosul_vilayet:0 "Mosul Vilayet"
  TUR_mosul_vilayet_desc:0 "[TUR_mosul_vilayet_desc]"
@@ -5491,10 +5504,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_usurp_assyrian_properties_tt:0 "Modify £ww1_flag_ASY §YAssyrian Minority§! by\n£civ_factory  Max Factories in a State: §G+5%§!\n\n"
  TUR_increase_diyarbakir_centralization_1:0 "Modify §YCentralization§! of §YDiyarbakır Vilayet§! by §G+1%§!\n"
  TUR_increase_van_centralization_1:0 "Modify §YCentralization§! of §YVan Vilayet§! by §G+1%§!\n"
- TUR_increase_erbil_centralization_1:0 "Modify §YCentralization§! of §YErbil Vilayet§! by §G+1%§!\n"
+ TUR_increase_mosul_centralization_1:0 "Modify §YCentralization§! of §YMosul Vilayet§! by §G+1%§!\n"
  TUR_massacre_assyrians:0 "Massacre Assyrians in [FROM.GetName]"
  TUR_massacre_assyrians_desc:0 "There are several towns and villages that accompany a large Assyrian population in [FROM.GetName]. By massacring them in their native lands, we can create an ethnically homogenious society."
- TUR_occupy_mount_lebanon_mutasarrifate:0 "Lift the Mount Lebanon Mutasarrifate"
+ TUR_occupy_mount_lebanon_mutasarrifate:0 "Occupy Mount Lebanon Mutasarrifate"
  TUR_occupy_mount_lebanon_mutasarrifate_desc:0 "Established under the foreign supervision, Mount Lebanon Mutasarrifate is an autonomous Mutasarrifate with a vide autonomy. Apart from various exceptions, we're forbidden to put troops in the region. By occupying Mount Lebanon, we'll decrease their defacto autonomy and put troops in the region."
  TUR_occupy_mount_lebanon_mutasarrifate_tt:0 "Replace §YAutonomous Mutasarrifate§! with §YAutonomous Vilayet§!\nEffective change:\n"
  TUR_lift_the_mutasarrifate_of_jerusalem:0 "Lift the Mutasarrifate of Jerusalem"
@@ -5844,17 +5857,25 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_has_active_investment:0 "Has an Active §YInvestment§!"
  TUR_berlin_baghdad_railway_mission:0 "Building the Berlin-Baghdad Railway"
  TUR_berlin_baghdad_railway_mission_desc:0 "Germany is building a railway to Baghdad. This large-scale project will help give a strong boost to our economy and provide the army with a convenient supply system. However, Britain and Russia are unhappy with German intervention in the Middle East. The Berlin-Baghdad railway may be the main cause of the international crisis."
+ TUR_increase_deir_ez_zor_centralization_10:0 "Modify §YCentralization§! of §YDeir ez-Zor Vilayet§! by §G+10%§!\n"
+ TUR_increase_basra_centralization_8:0 "Modify §YCentralization§! of §YBasra Vilayet§! by §G+8%§!\n"
+ TUR_increase_basra_centralization_7:0 "Modify §YCentralization§! of §YBasra Vilayet§! by §G+7%§!\n"
  TUR_stop_berlin_baghdad_railway_mission:0 "Stop the Construction of Berlin-Baghdad Railway"
  TUR_finish_alasehir_afyon_line:0 "Finish Alaşehir-Afyon Line"
  TUR_finish_alasehir_afyon_line_desc:0 "A part of the İzmir Afyon railway remains unfinished. We should lay last bit of remaining railway tracks on the path to complete the construction."
+ TUR_increase_aydin_centralization_2:0 "Modify §YCentralization§! of §YAydın Vilayet§! by §G+2%§!\n"
+ TUR_increase_konya_centralization_3:0 "Modify §YCentralization§! of §YKonya Vilayet§! by §G+3%§!\n"
  TUR_extend_izmir_egirdir_line:0 "Extend İzmir-Eğirdir Line"
  TUR_extend_izmir_egirdir_line_desc:0 "As first İzmir railway line, first railway in our empire, was a success, we can look for extending its usage. As we've already started the extention of this line, we can finally finish its final destination."
+ TUR_increase_konya_centralization_5:0 "Modify §YCentralization§! of §YKonya Vilayet§! by §G+5%§!\n"
  TUR_complete_adana_aleppo_line:0 "Complete Adana-Aleppo Line"
  TUR_complete_adana_aleppo_line_desc:0 "Started construction in 1908, Adana-Aleppo line sought to connect our Anatolian railways with the line in Hejaz. After several years, we're finally ready to complete the railway line."
  TUR_extend_jaffa_line_to_the_south:0 "Extend Jaffa Line to the South"
  TUR_extend_jaffa_line_to_the_south_desc:0 "As our empire faces possible enemies right across the border in Sinai, we must extend the already existing railway in Jaffa to the south in order to transport troops."
+ TUR_increase_jerusalem_centralization_10:0 "Modify §YCentralization§! of §YJerusalem Vilayet§! by §G+10%§!\n"
  TUR_construct_hudaydah_sana_line:0 "Construct al-Hudayah-Sana'a Line"
  TUR_construct_hudaydah_sana_line_desc:0 "A new railway project shows itself fit for construction. To strengthen our hold in the Arabian peninsula, we can link a railway through the coastal city of al-Hudayah to Sana'a"
+ TUR_increase_yemen_centralization_10:0 "Modify §YCentralization§! of §YYemen Vilayet§! by §G+10%§!\n"
  TUR_berlin_baghdad_railway_crisis:0 "Berlin-Baghdad Railway Conflict"
  TUR_berlin_baghdad_railway_crisis_desc:0 "The construction of the railway in Mesopotamia became a battleground for British and German interests. If there is no peaceful solution, the two largest empires will move from negotiations to full-fledged colonial war."
  TUR_purchase_brandenburg_class:0 "Purchase Brandenburg Class"
@@ -6482,7 +6503,9 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_production_speed_infrastructure_factor_05_TUR_production_speed_arms_factory_factor_05_TUR_production_speed_industrial_complex_factor_05_TUR_production_dockyard_factory_factor_052:0 "Modify §YSocialist Economy§! by\n§YInfrastructure§! Construction Speed: §R-5.00%§!\n§YMilitary Factory§! Construction Speed: §R-5.00%§!\n§YCivilian Factory§! Construction Speed: §R-5.00%§!\n§YDockyard§! Construction Speed: §R-5.00%§!"
  TUR_develop_black_sea_steel_mills:0 "Develop Black Sea Steel Mills"
  TUR_expand_mosul_oil_fields:0 "Expand Mosul Oil Fields"
+ TUR_increase_mosul_centralization_3:0 "Modify §YCentralization§! of §YMosul Vilayet§! by §G+3%§!\n"
  TUR_expand_kirkuk_oil_fields:0 "Expand Kirkuk Oil Fields"
+ TUR_increase_mosul_centralization_2:0 "Modify §YCentralization§! of §YMosul Vilayet§! by §G+2%§!\n"
  TUR_improve_constantinople_eskisehir_line:0 "Improve [347.GetName] - Eskişehir Line"
  TUR_organize_worker_rallies_in_thrace:0 "Organize Worker Rallies in Thrace"
  TUR_appease_imro_militias:0 "Appease VMORO Militias"
