--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10530,7 +10530,7 @@ FIN_pardon_the_reds_tt: "Will unlock further decisions over time to£decision_ic
 FIN_pardon_the_reds: "Pardon the Ones Who Didn't Fight"
 FIN_pardon_the_reds_desc: "Even though at least according to some not just all the men but the women and the children too in the prison camps deserve their destinies but according to some the ones who didn't participate the rebellion should be pardoned in order to both get our economy back to its feet and improve the horrendous conditions in the camps."
 FIN_recover_from_cw: "Recover From Civil War"
-FIN_recover_from_cw_desc: "Now finally when the fighting has stopped and the last rebels have surrendered we can finally focus on rebuilding and recovering our nation, its people and economy."
+FIN_recover_from_cw_desc: "Now the fighting has finally stopped and the last rebels have surrendered so we can now fully focus on rebuilding and recovering our nation, its people and economy."
 FIN_white_guard_act: "Civil Guard Act"
 FIN_white_guard_act_desc: "After the end of the civil war the White Guards that formed the backbone of our army during the civil war have been marginalized in favor of the regular army which have led to some of their leader demanding us to recognise them as an independent Organisation rather than a part of the army."
 FIN_torppari_laki: "Act on Redemption of Leased Areas"
